[tool.poetry]
name = "jaffalearn"
version = "0.1.1"
description = "A PyTorch-based ML framework with a focus on audio classification problems"
authors = ["Turab Iqbal <t.iqbal@surrey.ac.uk>"]
repository = "https://github.com/tqbl/jaffalearn"
license = "ISC"
classifiers = [
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules"
]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
numpy = "^1.21.4"
pandas = "^1.3.4"
tensorboard = "^2.7.0"
torch = "^1.8.1"
torchaudio = "^0.8.1"
tqdm = "^4.62.3"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
